--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -529,6 +529,8 @@
   "min_nr_of_options": "Minimálny počet možností",
   "minimum_nr_choices": "Minimálny počet možností",
   "more_info": "Viac Info",
+  "multi_out_payment": "Platba Multi Out",
+  "multi_out_same_payment": "Multi Out Rovnaká čiastka Platba",
   "multiple_assets_differences": "Viaceré rôzne majetky boli predané a/alebo zakúpené.",
   "my_assets": "Môj majetok",
   "my_completed_orders": "Moje ukončené príkazy",
