--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -529,6 +529,8 @@
   "min_nr_of_options": "Минималан Број Опција",
   "minimum_nr_choices": "Минималан Број Избора",
   "more_info": "Више Информација",
+  "multi_out_payment": "Мулти Оут Плаћање",
+  "multi_out_same_payment": "Мулти Оут Саме исплата износа",
   "multiple_assets_differences": "Више различитих ассета је продано и/или купљено.",
   "my_assets": "Моји Асети",
   "my_completed_orders": "Моје Извршене Поруџбине",
