feat(SendMoney): add encrypted (and unencrypted) msg support to send burst form

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -473,6 +473,7 @@
   "info": "Информация",
   "info_merchant_message_required": "Сметката на получателя изисква от вас да предоставите специално форматирано съобщение.",
   "info_referenced_transaction_hash": "Тъй като използвате сделка с референтен хеш, 100 BURST се удържат докато сделката не се потвърди или изтече срока.",
+  "input_pin": "Input PIN",
   "interface_tutorial": "Описание на интерфейса",
   "is_scanning": "Сканира се",
   "issue_asset": "Издаване актив",
