--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -473,6 +473,7 @@
   "info": "Информация",
   "info_merchant_message_required": "Учетная запись получателя требует чтобы вы предоставили специально форматированное сообщение.",
   "info_referenced_transaction_hash": "Благодаря использованию вами ссылки на хэш транзакции, 50 BURST \"заморожены\" до тех пор, пока транзакция не будет подтверждена или истечет.",
+  "input_pin": "Input PIN",
   "interface_tutorial": "Описание интерфейса",
   "is_scanning": "Идет Сканирование",
   "issue_asset": "Выпустить Актив",
