--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -473,6 +473,7 @@
   "info": "Інформація",
   "info_merchant_message_required": "Обліковий запис одержувача вимагає щоб ви надали спеціально форматоване повідомлення.",
   "info_referenced_transaction_hash": "Завдяки використанню вами посилання на хэш транзакції, 50 BURST \"заморожені\" до тих пір, поки транзакція не буде підтверджена або витече.",
+  "input_pin": "Input PIN",
   "interface_tutorial": "Підручник з Інтерфейсу",
   "is_scanning": "Сканування",
   "issue_asset": "Випустити Актив",
