--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -473,6 +473,7 @@
   "info": "Πληροφορίες",
   "info_merchant_message_required": "Ο λογαριασμό του παραλήπτη απαιτεί από εσάς να παρέχετε ένα ειδικά διαμορφωμένο μήνυμα.",
   "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 BURST is held in custody until the transaction is confirmed or expired.",
+  "input_pin": "Input PIN",
   "interface_tutorial": "Διάλογος φροντιστήριο",
   "is_scanning": "υπό σάρωση",
   "issue_asset": "Θέμα μετοχής",
