feat(settings): add settings page with node selector

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -716,6 +716,7 @@
   "seeded": "Наличен",
   "select_color_scheme": "Изберете цветова схема",
   "select_contact_in_sidebar": "Моля изберете контакт в лявата лента.",
+  "select_node": "Select Node",
   "sell": "Продай",
   "sell_alias": "Продай псевдоним",
   "sell_asset_for_burst": "Sell __assetName__ for BURST",
