--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -716,6 +716,7 @@
   "seeded": "Sembrat",
   "select_color_scheme": "Seleccioneu el Color del Disseny",
   "select_contact_in_sidebar": "Si us plau seleccioneu un contacte a la barra de l'esquerra.",
+  "select_node": "Select Node",
   "sell": "Vendre",
   "sell_alias": "Vender Àlies",
   "sell_asset_for_burst": "Vendre __assetName__ per burst",
