--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -716,6 +716,7 @@
   "seeded": "Vygenerováno",
   "select_color_scheme": "Vyberte barevné schéma",
   "select_contact_in_sidebar": "Vyberte prosím kontakt z lišty vlevo.",
+  "select_node": "Select Node",
   "sell": "Prodat",
   "sell_alias": "Prodat alias",
   "sell_asset_for_burst": "Prodat __assetName__ za burst",
