--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -717,6 +717,7 @@
   "seeded": "Seeded",
   "select_color_scheme": "Farbschema auswählen",
   "select_contact_in_sidebar": "Bitte wählen Sie einen Kontakt in der linken Seitenleiste.",
+  "select_node": "Select Node",
   "sell": "Verkaufen",
   "sell_alias": "Alias verkaufen",
   "sell_asset_for_burst": "__assetName__ für BURST verkaufen",
