--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -716,6 +716,7 @@
   "seeded": "τοποθέτηση",
   "select_color_scheme": "Επιλέξτε χρώμα σχεδίου",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
+  "select_node": "Select Node",
   "sell": "Πωληση",
   "sell_alias": "Πώληση ψευδώνυμου",
   "sell_asset_for_burst": "Πώληση__assetName__ έναντι burst",
