--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -730,6 +730,7 @@
   "seeded": "Seeded",
   "select_color_scheme": "Select Color Scheme",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
+  "select_node": "Select Node",
   "sell": "Sell",
   "sell_alias": "Sell Alias",
   "sell_asset_for_burst": "Sell __assetName__ for BURST",
