--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -716,6 +716,7 @@
   "seeded": "Sembrado",
   "select_color_scheme": "Seleccione el Esquema de Color",
   "select_contact_in_sidebar": "Por favor, seleccione un contacto en la barra lateral izquierda.",
+  "select_node": "Select Node",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender__assetName__ por BURST",
