--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -716,6 +716,7 @@
   "seeded": "Kylvetty",
   "select_color_scheme": "Valitse väriteema",
   "select_contact_in_sidebar": "Valitse yhteystieto vasemmasta sivupalkista.",
+  "select_node": "Select Node",
   "sell": "Myy",
   "sell_alias": "Myy alias",
   "sell_asset_for_burst": "Myy __assetName__ BURST:ksi",
