--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -716,6 +716,7 @@
   "seeded": "Graine générée",
   "select_color_scheme": "Sélectionnez la couleur du thème",
   "select_contact_in_sidebar": "Merci de choisir un contact dans le volet gauche.",
+  "select_node": "Select Node",
   "sell": "Vendre",
   "sell_alias": "Vendre l'alias",
   "sell_asset_for_burst": "Vendre __assetName__ pour des BURST",
