--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -716,6 +716,7 @@
   "seeded": "Seeded",
   "select_color_scheme": "रंग योजना का चयन करें",
   "select_contact_in_sidebar": "कृपया बाईं साइडबार में एक संपर्क का चयन करें।",
+  "select_node": "Select Node",
   "sell": "बेचें",
   "sell_alias": "उपनाम बेचें",
   "sell_asset_for_burst": "burst पाने के लिए __assetName__ बेचें",
