--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -716,6 +716,7 @@
   "seeded": "Menyebarkan",
   "select_color_scheme": "Pilih skema warna",
   "select_contact_in_sidebar": "Silahkan pilih kontak di sidebar kiri.",
+  "select_node": "Select Node",
   "sell": "Menjual",
   "sell_alias": "Menjual Alias",
   "sell_asset_for_burst": "Jual __assetName__ untuk BURST",
