--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -716,6 +716,7 @@
   "seeded": "Seminato",
   "select_color_scheme": "Selezionare la combinazione di colori",
   "select_contact_in_sidebar": "Si prega di selezionare un contatto dalla barra laterale di sinistra.",
+  "select_node": "Select Node",
   "sell": "Venda",
   "sell_alias": "Vendi Alias",
   "sell_asset_for_burst": "Vendi __assetName__ per BURST",
