--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -716,6 +716,7 @@
   "seeded": "Atrinktas",
   "select_color_scheme": "Pasirinkite spalvų schemą",
   "select_contact_in_sidebar": "Kairiajame meniu pasirinkite kontaktą.",
+  "select_node": "Select Node",
   "sell": "Parduoti",
   "sell_alias": "Parduoti pseudonimą",
   "sell_asset_for_burst": "Parduoti __assetName__ už BURST",
