--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -725,6 +725,7 @@
   "seeded": "Seeded",
   "select_color_scheme": "Wybierz schemat koloru",
   "select_contact_in_sidebar": "Proszę wybrać kontakt po lewej.",
+  "select_node": "Select Node",
   "sell": "Sprzedaj",
   "sell_alias": "Sprzedaj Alias",
   "sell_asset_for_burst": "Sprzedaj __assetName__ za BURST",
