--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -716,6 +716,7 @@
   "seeded": "Semeado",
   "select_color_scheme": "Selecione o esquema de cores",
   "select_contact_in_sidebar": "Por favor, selecione um contato na barra lateral esquerda.",
+  "select_node": "Select Node",
   "sell": "Vender",
   "sell_alias": "Vender Pseudônimo",
   "sell_asset_for_burst": "Vender __assetName__ por burst",
