--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -716,6 +716,7 @@
   "seeded": "Semănat(e)",
   "select_color_scheme": "Selectare schemă culori",
   "select_contact_in_sidebar": "Te rugăm să selectezi o persoană de contact în bara laterală stânga.",
+  "select_node": "Select Node",
   "sell": "Vânzare",
   "sell_alias": "Vinde Alias",
   "sell_asset_for_burst": "Vinde __assetName__ pentru burst",
