--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -716,6 +716,7 @@
   "seeded": "Posijano",
   "select_color_scheme": "Odaberite shemu boje",
   "select_contact_in_sidebar": "Molimo odaberite kontakt u lijevom stupcu.",
+  "select_node": "Select Node",
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
   "sell_asset_for_burst": "Prodaj __assetName__ za burst",
