--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -716,6 +716,7 @@
   "seeded": "Nazbierané",
   "select_color_scheme": "Vybrať farebnú škálu",
   "select_contact_in_sidebar": "V ľavom paneli vyberte kontakt.",
+  "select_node": "Select Node",
   "sell": "Predať",
   "sell_alias": "Predať Alias",
   "sell_asset_for_burst": "Predať __assetName__ za BURST",
