--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -713,6 +713,7 @@
     "seed_password_generator": "Pomičite kursor miša za pokretanje generatora slučajnih brojeva...",
     "select_color_scheme": "Izaberite Shemu Boje",
     "select_contact_in_sidebar": "Molimo Vas izaberite kontakt u levom padajućem meniju.",
+    "select_node": "Select Node",
     "sell": "Prodaj",
     "seller": "Prodavac",
     "seller_account_id": "Seller's Account ID",
