--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -716,6 +716,7 @@
   "seeded": "Зачето",
   "select_color_scheme": "Изаберите Схему Боје",
   "select_contact_in_sidebar": "Молимо одаберите контакт у левој колони.",
+  "select_node": "Select Node",
   "sell": "Продај",
   "sell_alias": "Продајте Алиас",
   "sell_asset_for_burst": "Продајте __assetName__ за BURST",
