--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -716,6 +716,7 @@
   "seeded": "Роздачі",
   "select_color_scheme": "Виберіть колірну схему",
   "select_contact_in_sidebar": "Будь ласка, виберіть контакт у лівій бічній панелі.",
+  "select_node": "Select Node",
   "sell": "Продати",
   "sell_alias": "Продати Альяс",
   "sell_asset_for_burst": "Продати __assetName__  за BURST",
