--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -716,6 +716,7 @@
   "seeded": "Sembrado",
   "select_color_scheme": "Seleccione o esquema de color",
   "select_contact_in_sidebar": "Por favor seleccione un contacto na barra lateral esquerda.",
+  "select_node": "Select Node",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender __assetName__ por BURST",
