--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -716,6 +716,7 @@
   "seeded": "シードされた",
   "select_color_scheme": "配色を選択",
   "select_contact_in_sidebar": "左のサイドバーで連絡先を選択してください。",
+  "select_node": "Select Node",
   "sell": "販売",
   "sell_alias": "エイリアスを販売",
   "sell_asset_for_burst": "__assetName__をBURSTで販売",
