--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -716,6 +716,7 @@
   "seeded": "Ge-seed",
   "select_color_scheme": "Selecteer kleurenschema",
   "select_contact_in_sidebar": "Selecteer A.u.b. een contactpersoon in de linker menubar.",
+  "select_node": "Select Node",
   "sell": "Verkoop",
   "sell_alias": "Verkoop Alias",
   "sell_asset_for_burst": "Verkoop __assetName__ voor BURST",
