--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -716,6 +716,7 @@
   "seeded": "Раздачи",
   "select_color_scheme": "Выберите цветовую схему",
   "select_contact_in_sidebar": "Пожалуйста, выберите контакт в левой боковой панели.",
+  "select_node": "Select Node",
   "sell": "Продать",
   "sell_alias": "Продать псевдоним",
   "sell_asset_for_burst": "Продать __assetName__ за BURST",
