--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -716,6 +716,7 @@
   "seeded": "Seeded",
   "select_color_scheme": "Select Color Scheme",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
+  "select_node": "Select Node",
   "sell": "Sell",
   "sell_alias": "Sell Alias",
   "sell_asset_for_burst": "burst için __assetName__ Satış",
