--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -716,6 +716,7 @@
   "seeded": "隨機字符",
   "select_color_scheme": "选择色彩方案",
   "select_contact_in_sidebar": "请在左侧栏中选择一个联系人。",
+  "select_node": "Select Node",
   "sell": "出售",
   "sell_alias": "出售别名",
   "sell_asset_for_burst": "出售__assetName__ 获得BURST",
