--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -716,6 +716,7 @@
   "seeded": "隨機字符",
   "select_color_scheme": "選擇色彩方案",
   "select_contact_in_sidebar": "請在左側欄中選擇一個聯絡人。",
+  "select_node": "Select Node",
   "sell": "出售",
   "sell_alias": "出售別名",
   "sell_asset_for_burst": "出售__assetName__ 獲得BURST",
